--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,4 +1,3 @@
-
 <div class="row">
   <div class="col-md-2">
     <h5> Hi <%= @current_user.username %> </h5>
@@ -18,9 +17,9 @@
       </div>
     </div>
   </div>
-  <div class="col-md-10 bg-dark">
-    <% if @single_room %>
+  <div class="col-md-10 bg-dark text-light">
+  <% if @single_room %>
     <h4 class="text-center"> <%= @single_room.name %> </h4>
   <% end %>
-  </div>
+</div>
 </div>
