--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -17,9 +17,15 @@
       </div>
     </div>
   </div>
+
   <div class="col-md-10 bg-dark text-light">
-  <% if @single_room %>
-    <h4 class="text-center"> <%= @single_room.name %> </h4>
-  <% end %>
-</div>
+    <%if @single_room %>
+      <h4 class="text-center"> <%= @single_room.name %> </h4>
+    <%= turbo_stream_from @single_room %>
+    <div id="messages">
+    </div>
+    <%= render partial: "layouts/new_message_form" %>
+    <% end %>
+  </div>
+  
 </div>
