--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -23,9 +23,10 @@
       <h4 class="text-center"> <%= @single_room.name %> </h4>
     <%= turbo_stream_from @single_room %>
     <div id="messages">
+      <%= render @messages %>
     </div>
     <%= render partial: "layouts/new_message_form" %>
     <% end %>
   </div>
-  
+  <%= link_to 'Sign Out', signout_path,  :method => :delete %>
 </div>
