new features and fixes

--- a/app/views/layouts/_new_message_form.html.erb
+++ b/app/views/layouts/_new_message_form.html.erb
@@ -4,3 +4,9 @@
     <%= f.submit data: { disable_with: false }, class: "btn btn-primary" %>
   <% end %>
 </div>
+<style>
+  #chat-text {
+    background-color: #555 !important;
+    color: #eee;
+  }
+</style>
