--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,59 @@
  *= require_tree .
  *= require_self
  */
+* {
+    font-family: 'Poppins', sans-serif;
+}
+
+.name span{
+    background-color: rgba(0, 0, 0, 0.6);
+    display: inline-block;
+    padding: 5px;
+    border-radius: 5px;
+}
+
+.message-box {
+    border-radius: 5px;
+    box-shadow:  5px 5px 10px #2b3035,
+                -5px -5px 10px #3d444b;
+}
+
+.sidebar {
+    background-color: #222;
+    box-sizing: border-box;
+    padding: 2rem;
+    color: #eee;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+#rooms {
+    background-color: rgba(0, 0, 0, 0.3);
+    padding: 1rem;
+    border-radius: 5px;
+}
+
+.sidebar #rooms *{
+    color: #918EF4;
+}
+
+#room-name span {
+    background-color: rgba(0, 0, 0, 0.6);
+    color: #918EF4;
+    display: inline-block;
+    padding: 5px;
+    border-radius: 5px;
+    margin-top: 40px;
+    font-weight: 600;
+    box-shadow: #918EF4;
+}
+
+#messages {
+    animation: fadein 700ms linear 0s 1;
+}
+
+@keyframes fadein {
+    from { opacity: 0; }
+    to {opacity: 1;}
+}
