--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,7 +1,7 @@
 <div class="cont-<%= message.user.id %>">
   <div class="message-box msg-<%= message.user.id %> " >
     <% unless message.room.is_private %>
-      <h6 class="name"> <%= message.user.username %> </h6>
+      <h6 class="name"><span> <%= message.user.username %></span> </h6>
     <% end %>
   <%= message.content %>
   </div>
