--- a/app/views/rooms/index.html.erb
+++ b/app/views/rooms/index.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="col-md-2">
+  <div class="col-md-2 sidebar">
     <h5> Hi <%= @current_user.username %> </h5>
     <h4> Users </h4>
     <div>
@@ -20,7 +20,7 @@
 
   <div class="col-md-10 bg-dark text-light">
     <%if @single_room %>
-      <h4 class="text-center"> <%= @single_room.name %> </h4>
+      <h4 class="text-center" id="room-name"> <span><%= @single_room.name %></span> </h4>
     <%= turbo_stream_from @single_room %>
     <div id="messages">
       <%= render @messages %>
@@ -28,5 +28,5 @@
     <%= render partial: "layouts/new_message_form" %>
     <% end %>
   </div>
-  <%= link_to 'Sign Out', signout_path,  :method => :delete %>
+  <%= button_to 'Sign Out', signout_path,  :method => :delete %>
 </div>
