--- a/app/views/layouts/_new_message_form.html.erb
+++ b/app/views/layouts/_new_message_form.html.erb
@@ -1,12 +1,8 @@
 <div class="form-group msg-form">
   <%= form_with(model: [@single_room ,@message], remote: true, class: "d-flex",data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset" }) do |f| %>
-    <%= f.text_field :content, id: 'chat-text', class: "form-control msg-content", autocomplete: 'off' %>
-    <%= f.submit data: { disable_with: false }, class: "btn btn-primary" %>
+    <div class="message_form_box">
+      <%= f.text_field :content, id: 'chat-text', class: "form-control msg-content", autocomplete: 'off' %>
+      <%= f.submit data: { disable_with: false }, class: "btn submit-btn" %>
+    </div>
   <% end %>
 </div>
-<style>
-  #chat-text {
-    background-color: #555 !important;
-    color: #eee;
-  }
-</style>
