--- a/app/views/layouts/_new_room_form.html.erb
+++ b/app/views/layouts/_new_room_form.html.erb
@@ -1,4 +1,6 @@
 <%= form_with(model: @room, remote: true, class: "d-flex" ) do |f| %>
-  <%= f.text_field :name, class: "form-control", autocomplete: 'off' %>
-  <%= f.submit data: { disable_with: false } %>
+  <div class="new_room_form_container">
+    <%= f.text_field :name, class: "form-control", autocomplete: 'off', placeholder: "Type room name..." %>
+    <%= f.submit data: { disable_with: false } %>
+  </div>
 <% end %>
