--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -140,14 +140,39 @@ body {
     color: #222 !important;
 }
 
-.actions {
-
+#sign_in_wrapper_parent{
+    width: 100%;
+    height: 100vh;
+    background-color: #222;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
+#sign_in_wrapper {
+    display: flex;
+    flex-direction: column;
+    width: 15rem;
+    gap: 0.75rem;
+    background-color: #918EF4;
+    padding: 4rem 1.5rem 1.5rem 1.5rem;
+    box-sizing: content-box;
+}
 
+#sign_in_wrapper h2 {
+    text-align: center;
+    font-size: 1.25rem;   
+}
 
+/* #sign_in_wrapper input::placeholder{ */
+    /* font-size: 0.75rem; */
+/* } */
 
-
+#sign_in_wrapper input{
+    padding: .3rem;
+    border-radius: 5px;
+    border: none;
+}
 
 
 @keyframes fadein {
